# billing_control

./: .env.example  .gitignore  README.md  docker-compose.lite.yml  docker-compose.yml  hard_start.sh  hard_start_lite.sh  nginx.conf  nginx.lite.conf  nginx.prod.conf
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_order_part_items.py  003_remove_buffer_add_plan_part_files.py  004_bom_name_order_item_bom.py  005_remove_sku_order_no.py  006_order_items_allow_same_device_different_bom.py  007_description_uom.py
backend/app/: config.py  database.py  main.py  schema_ensure.py
backend/app/api/: bom.py  devices.py  files.py  invoices.py  monthly_plans.py  orders.py  parts.py  stats.py
backend/app/models/: __init__.py  bom.py  device.py  invoice.py  monthly_plan.py  order.py  order_part_item.py  part.py
backend/app/schemas/: common.py
backend/app/seeds/: init_data.py
backend/app/services/: monthly_plan.py  s3_service.py
frontend/: Dockerfile  package.json  svelte.config.js  tailwind.config.js  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: api.ts  format.ts
frontend/src/routes/: +layout.svelte  +page.svelte  +page.ts
frontend/src/routes/bom/: +page.svelte
frontend/src/routes/devices/: +page.svelte
frontend/src/routes/invoices/: +page.svelte
frontend/src/routes/monthly-plans/: +page.svelte
frontend/src/routes/orders/: +page.svelte
frontend/src/routes/parts/: +page.svelte
scripts/: sync-portainer-password-from-env.py
(+1 files in other folders)
